#
# build the analytical integral engine for 2ed derivatives of eri
#
set(SRC_GINTS_ENGINE_ERI_D2
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/hgp_os_eri_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_d_d_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_d_d_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_d_d_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_d_d_d2_hrr1_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_d_d_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_d_d_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_d_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_d_p_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_d_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_d_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_d_sp_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_d_sp_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_f_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_f_p_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_f_p_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_f_p_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_f_p_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_f_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_f_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_f_sp_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_f_sp_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_f_sp_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_f_sp_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_f_sp_d2_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_f_sp_d2_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_f_sp_d2_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_f_sp_d2_vrrcont_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_p_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_p_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_p_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_s_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_sp_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_sp_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_d_sp_sp_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_p_d_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_p_d_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_p_d_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_p_f_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_p_p_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_p_p_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_p_p_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_p_s_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_p_sp_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_p_sp_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_s_d_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_s_p_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_s_s_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_s_sp_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_sp_d_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_sp_d_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_sp_f_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_sp_p_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_sp_p_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_sp_p_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_sp_s_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_sp_sp_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_d_sp_sp_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_d_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_d_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_d_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_d_d2_deriv_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_d_d2_hrr1_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_d_d2_hrr1_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_d_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_d_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_d_d2_hrr2_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_d_d2_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_d_d2_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_d_d2_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_d_d2_vrrcont_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_p_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_p_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_p_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_p_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_sp_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_sp_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_sp_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_d_sp_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2_deriv_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2_deriv_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2_hrr1_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2_hrr1_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2_hrr1_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2_hrr2_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2_hrr2_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_d_d2_vrrcont_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_p_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_p_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_p_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_p_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_p_d2_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_p_d2_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_p_d2_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_sp_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_sp_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_sp_d2_deriv_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_sp_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_sp_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_sp_d2_hrr2_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_sp_d2_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_sp_d2_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_sp_d2_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_f_sp_d2_vrrcont_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_p_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_p_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_p_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_p_sp_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_s_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_sp_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_sp_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_sp_sp_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_sp_sp_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_sp_sp_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_d_sp_sp_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_deriv_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_deriv_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_hrr1_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_hrr1_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_hrr1_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_hrr2_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_hrr2_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_hrr2_5.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_hrr2_6.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_vrrcont_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_d_d2_vrrcont_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_p_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_p_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_p_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_p_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_p_d2_hrr2_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_p_d2_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_p_d2_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_p_d2_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_p_d2_vrrcont_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_s_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_sp_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_sp_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_sp_d2_deriv_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_sp_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_sp_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_sp_d2_hrr2_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_sp_d2_hrr2_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_sp_d2_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_sp_d2_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_sp_d2_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_sp_d2_vrrcont_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_d_sp_d2_vrrcont_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_deriv_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_deriv_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_deriv_5.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_deriv_6.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_deriv_7.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_hrr1_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_hrr1_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_hrr1_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_hrr1_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_hrr2_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_hrr2_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_hrr2_5.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_hrr2_6.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_hrr2_7.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_hrr2_8.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_hrr2_9.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_vrr_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_vrrcont_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_d_d2_vrrcont_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_deriv_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_deriv_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_deriv_5.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_deriv_6.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_deriv_7.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_deriv_8.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_deriv_9.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr1_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr1_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr1_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr1_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr1_5.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr1_6.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr1_7.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr1_8.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr1_9.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr2_10.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr2_11.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr2_12.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr2_13.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr2_14.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr2_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr2_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr2_5.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr2_6.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr2_7.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr2_8.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_hrr2_9.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_vrr_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_vrr_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_vrrcont_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_vrrcont_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_f_d2_vrrcont_5.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_p_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_p_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_p_d2_deriv_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_p_d2_deriv_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_p_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_p_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_p_d2_hrr2_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_p_d2_hrr2_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_p_d2_hrr2_5.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_p_d2_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_p_d2_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_p_d2_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_p_d2_vrrcont_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_s_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_s_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_s_d2_hrr1_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_s_d2_hrr1_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_deriv_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_deriv_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_deriv_5.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_hrr2_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_hrr2_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_hrr2_5.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_hrr2_6.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_vrrcont_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_f_sp_d2_vrrcont_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_p_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_p_p_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_p_p_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_p_p_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_p_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_p_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_p_sp_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_p_sp_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_p_sp_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_p_sp_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_s_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_sp_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_sp_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_sp_sp_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_sp_sp_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_sp_sp_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_sp_sp_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_sp_sp_d2_hrr2_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_sp_sp_d2_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_sp_sp_d2_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_sp_sp_d2_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_sp_sp_d2_vrrcont_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_sp_sp_d2_vrrcont_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_sp_sp_d2_vrrcont_5.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_f_sp_sp_d2_vrrcont_6.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_d_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_d_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_d_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_d_sp_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_f_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_f_p_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_f_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_f_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_f_sp_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_f_sp_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_f_sp_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_p_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_p_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_p_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_s_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_sp_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_p_sp_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_s_d_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_s_f_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_s_p_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_s_p_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_s_p_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_s_s_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_s_sp_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_s_sp_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_d_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_d_p_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_d_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_d_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_d_sp_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_d_sp_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_f_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_f_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_f_sp_d2_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_f_sp_d2_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_f_sp_d2_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_f_sp_d2_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_f_sp_d2_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_f_sp_d2_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_f_sp_d2_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_f_sp_d2_vrrcont_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_f_sp_d2_vrrcont_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_p_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_p_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_p_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_s_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_sp_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_f_sp_sp_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_p_d_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_p_p_p_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_p_p_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_p_p_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_p_s_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_p_sp_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_p_sp_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_s_p_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_s_s_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_s_sp_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_sp_d_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_sp_p_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_sp_p_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_sp_s_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_sp_sp_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_p_sp_sp_sp_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_s_s_s_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_sp_s_s_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_sp_s_sp_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_sp_sp_d_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_sp_sp_p_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_sp_sp_s_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_sp_sp_sp_s_d2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/second_deriv/eri/hgp_os_eri_sp_sp_sp_sp_d2.cpp
   )
add_library(gints_engine_eri_d2 ${SRC_GINTS_ENGINE_ERI_D2})
